# conviction-tracker

./: .env.example  .gitignore  CLAUDE.md  SPEC.md  pyproject.toml  requirements.txt
data/: sectors.json  watchlist.json
docs/: data-sources.md
scripts/: backfill.py  run_ingestion.py  setup_db.py  update_etf_constituents.py
src/: config.py
src/alerts/: formatters.py  telegram_bot.py
src/dashboard/: app.py
src/dashboard/pages/: filings.py  health.py  overview.py  politicians.py  sectors.py
src/db/: models.py  queries.py
src/engine/: anti_signal.py  bullseye.py  confirmation.py  inner_ring.py  middle_ring.py  outer_ring.py  scoring.py
src/monitoring/: health.py
src/scrapers/: congress_scraper.py  edgar_scraper.py  etf_mapper.py
src/utils/: logger.py
tests/: test_alerts.py  test_anti_signal.py  test_db.py  test_digest.py  test_inner_ring.py  test_middle_ring.py  test_pipeline.py  test_scoring.py  test_scrapers.py
